--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -18,4 +18,15 @@ litters_df = janitor::clean_names(litters_df)
 
 ## Take a look at the data
 
+```{r}
+litters_df
+```
+
+```{r}
+tail(litters_df)
+```
+
+```{r}
+skimr::skim(litters_df)
+```
 
