--- a/data_manipulationRmd.Rmd
+++ b/data_manipulationRmd.Rmd
@@ -14,3 +14,39 @@ litter_df = read_csv("./data/FAS_litters.csv")
 litter_df = janitor::clean_names(litter_df)
 ```
 
+## `select`
+
+Choose some columns and not others.
+
+```{r}
+select(litter_df, group, gd0_weight:gd_of_birth)
+```
+
+```{r}
+select(litter_df, -litter_number)
+```
+
+Renaming columns...
+
+```{r}
+select(litter_df, GROUP = group, LITTer_NUmBer = litter_number)
+```
+
+```{r}
+rename(litter_df, GROUP = group, LITTer_NUmBer = litter_number)
+```
+
+Select helpers
+
+```{r}
+select(litter_df, starts_with("gd"))
+```
+
+```{r}
+select(litter_df, litter_number, everything())
+```
+
+```{r}
+relocate(litter_df, litter_number)
+```
+
