--- a/data_manipulationRmd.Rmd
+++ b/data_manipulationRmd.Rmd
@@ -80,3 +80,12 @@ filter(litter_df, group == "Mod8")
 ```{r}
 filter(litter_df, group %in% c("Con7", "Mod8"))
 ```
+
+## `mutate`
+
+```{r}
+mutate(litter_df, 
+       wt_gain = gd18_weight - gd0_weight,
+       group = str_to_lower(group))
+```
+
