--- a/data_manipulationRmd.Rmd
+++ b/data_manipulationRmd.Rmd
@@ -95,3 +95,26 @@ mutate(litter_df,
 arrange(litter_df, pups_born_alive)
 ```
 
+## `%>%`
+
+```{r}
+litters_data_raw = read_csv("./data/FAS_litters.csv")
+litters_clean_name = janitor::clean_names(litters_data_raw)
+litters_data_selected = select(litters_clean_name, -pups_survive)
+litters_mutated = mutate(litters_data_selected, wt_gain = gd18_weight - gd0_weight)
+litters_without_missing = drop_na(litters_mutated, gd0_weight)
+```
+
+USE THE PIPE OPERATION INSTEAD
+
+```{r}
+litter_df = 
+  read_csv("./data/FAS_litters.csv") %>% 
+  janitor::clean_names() %>% 
+  select(-pups_survive) %>% 
+  mutate(wt_gain = gd18_weight - gd0_weight) %>% 
+  drop_na(gd0_weight)
+  
+```
+
+
